# Binary-patcher

./: .gitignore  README.md
executable_patcher/: CMakeLists.txt
executable_patcher/inc/: cli_interface.h  gui_interface.h  patcher.h
executable_patcher/src/: cli_interface.cpp  gui_interface.cpp  main.cpp  patcher.cpp
text_printer/: CMakeLists.txt
text_printer/src/: buffer.h  text_printer.cpp
